--- a/wix-embed-code.html
+++ b/wix-embed-code.html
@@ -43,6 +43,7 @@
             border: none;
             display: block;
             background: transparent;
+            overflow: hidden;
         }
     </style>
 </head>
@@ -61,6 +62,7 @@
         id="magazine-embed"
         title="Catalyst Magazine"
         loading="eager"
+        scrolling="no"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         sandbox="allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox allow-forms"
     ></iframe>
