--- a/index.html
+++ b/index.html
@@ -52,11 +52,15 @@
 
         <!-- HERO: RECENT STORIES -->
         <section class="hero-section" id="recent">
-            <div class="section-header">
-                <h1 class="hero-title">Recent Stories</h1>
+            <div class="section-header hero-header">
+                <div class="section-lede">
+                    <h1 class="hero-title">Recent Stories</h1>
+                </div>
             </div>
-            <div class="hero-track" id="recent-track">
-                <!-- Injected via JS -->
+            <div class="hero-shell">
+                <div class="hero-track" id="recent-track">
+                    <!-- Injected via JS -->
+                </div>
             </div>
         </section>
 
