--- a/index.html
+++ b/index.html
@@ -90,6 +90,23 @@
             <div class="std-track" id="container-biotech"></div>
         </section>
 
+        <section class="editorial-section" id="editorials">
+            <div class="editorial-shell">
+                <div class="editorial-header">
+                    <div class="editorial-title-block">
+                        <p class="editorial-eyebrow">Hear From Our Editors</p>
+                        <h2 class="editorial-heading">Capital Perspectives</h2>
+                        <p class="editorial-subtitle">Op-eds from the Catalyst desk on science, policy, and the stories shaping the District.</p>
+                    </div>
+                    <div class="editorial-badge">
+                        <span class="badge-dot"></span>
+                        Editors' Desk
+                    </div>
+                </div>
+                <div class="editorial-grid" id="editorials-container"></div>
+            </div>
+        </section>
+
         <div id="noResults" class="no-results hidden">No articles match your search just yet.</div>
 
     </main>
