--- a/wix-embed-code.html
+++ b/wix-embed-code.html
@@ -33,7 +33,7 @@
         }
 
         body {
-            overflow: hidden;
+            overflow: auto;
             background: transparent;
         }
 
@@ -43,7 +43,6 @@
             border: none;
             display: block;
             background: transparent;
-            overflow: hidden;
         }
     </style>
 </head>
@@ -58,40 +57,27 @@
       - Wix File Manager: https://yoursite.wixsite.com/files/index.html
     -->
     <iframe
-        src="YOUR-HOSTED-URL/index.html"
+        src="https://sillybob123.github.io/catalystmagazineposts/index.html"
         id="magazine-embed"
         title="Catalyst Magazine"
         loading="eager"
-        scrolling="no"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         sandbox="allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox allow-forms"
     ></iframe>
 
     <script>
-        // Auto-resize iframe based on content
+        // Auto-resize iframe to match content height
         window.addEventListener('message', function(event) {
             const iframe = document.getElementById('magazine-embed');
             const data = event.data || {};
 
+            // Expand iframe height to match content
             if (data && (data.type === 'setHeight' || data.type === 'embed-size')) {
                 const height = data.height;
                 if (height && iframe) {
                     iframe.style.height = height + 'px';
                     iframe.style.minHeight = height + 'px';
                 }
-            }
-
-            // Forward scroll events to parent
-            if (data && data.type === 'scroll') {
-                window.parent.postMessage(data, '*');
-            }
-
-            // Keep scroll passthrough handshake alive (used by the embed to know when to preventDefault)
-            if (data && data.type === 'scroll-bridge-ping') {
-                window.parent.postMessage(data, '*');
-            }
-            if (data && data.type === 'scroll-bridge-ack' && iframe?.contentWindow) {
-                iframe.contentWindow.postMessage({ type: 'scroll-bridge-ack' }, '*');
             }
         }, false);
 
