--- a/wix-embed-code.html
+++ b/wix-embed-code.html
@@ -40,7 +40,7 @@
         title="Catalyst Magazine"
         loading="eager"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        sandbox="allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox allow-forms"
+        sandbox="allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox allow-forms allow-top-navigation"
     ></iframe>
 
     <script>
