--- a/index.html
+++ b/index.html
@@ -33,18 +33,12 @@
 </head>
 <body>
 
-    <!-- STICKY HEADER (Search & Nav) -->
+    <!-- HEADER (Welcome & Brain Teaser) -->
     <header class="sticky-header">
         <div class="header-content">
-            <!-- Search Bar & Brain Teaser Button -->
-            <div class="search-row">
-                <div class="search-wrapper">
-                    <svg class="search-icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Search">
-                        <circle cx="11" cy="11" r="8"></circle>
-                        <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
-                    </svg>
-                    <input type="text" class="search-input" id="searchInput" placeholder="Search articles, authors, or topics..." autocomplete="off">
-                </div>
+            <!-- Welcome Message & Brain Teaser Button -->
+            <div class="welcome-row">
+                <h1 class="welcome-title">Welcome to The Catalyst</h1>
                 <a class="nav-btn" href="https://catalyst-magazine.com/#brainteaser" target="_top">
                     Brain Teaser
                 </a>
@@ -121,8 +115,6 @@
                 <div class="editorial-grid" id="editorials-container"></div>
             </div>
         </section>
-
-        <div id="noResults" class="no-results hidden">No articles match your search just yet.</div>
 
     </main>
 
