--- a/index.html
+++ b/index.html
@@ -33,26 +33,19 @@
 </head>
 <body>
 
-    <!-- HEADER (Welcome & Brain Teaser) -->
-    <header class="sticky-header">
+    <!-- HEADER -->
+    <header class="site-header">
         <div class="header-content">
-            <!-- Welcome Message & Brain Teaser Button -->
-            <div class="welcome-row">
-                <h1 class="welcome-title">Welcome to The Catalyst</h1>
-                <a class="nav-btn" href="https://catalyst-magazine.com/#brainteaser" target="_top">
+            <div class="header-row">
+                <div class="brand-block">
+                    <span class="brand-accent">Catalyst</span>
+                    <span class="brand-separator">/</span>
+                    <span class="brand-tagline">Science from the Capital</span>
+                </div>
+                <a class="brain-teaser-link" href="https://catalyst-magazine.com/#brainteaser" target="_top">
                     Brain Teaser
                 </a>
             </div>
-
-            <!-- Category Navigation -->
-            <nav class="category-nav" id="categoryNav">
-                <button class="nav-pill active" type="button" data-target="recent">Recent</button>
-                <button class="nav-pill" type="button" data-target="neuro">Neuroscience</button>
-                <button class="nav-pill" type="button" data-target="biochemphys">Bio/Chem/Phys</button>
-                <button class="nav-pill" type="button" data-target="env">Environment</button>
-                <button class="nav-pill" type="button" data-target="public">Public Health</button>
-                <button class="nav-pill" type="button" data-target="biotech">Biotech & AI</button>
-            </nav>
         </div>
     </header>
 
